[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/minigames/pipe_connect.gd" id="1_script"]

[node name="PipeConnect" type="Node"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.15, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PIPE CONNECT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxInfo" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TimerLabel" type="Label" parent="VBoxContainer/HBoxInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Time: 10.0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxInfo"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HBoxInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "Solved: 0 / 5"
horizontal_alignment = 1

[node name="CountdownLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridPanel" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PipeGrid" type="GridContainer" parent="VBoxContainer/GridPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
columns = 5

[node name="InstructionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Get ready..."
horizontal_alignment = 1
vertical_alignment = 1
